--- a/application/src/main/resources/application-default.yml
+++ b/application/src/main/resources/application-default.yml
@@ -30,5 +30,5 @@ vanadium:
   dmt:
     authentication:
       jwt-secret: secret
-      access-token-expiration: 5m
+      access-token-expiration: 10d
       refresh-token-expiration: 30d
