--- a/environment/dev/docker-compose.yaml
+++ b/environment/dev/docker-compose.yaml
@@ -33,6 +33,18 @@ services:
       - postgres
     ports:
       - "18080:8080"
+  minio:
+    image: docker.io/bitnami/minio:latest
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    volumes:
+      - 'minio_data:/data'
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=password
+      - MINIO_DEFAULT_BUCKETS=dmt
 
 volumes:
   postgres_data:
+  minio_data:
